--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
     }
   ],
   "require": {
-    "php": ">=7.0.0",
-    "illuminate/support": "^5.4",
-    "illuminate/config": "^5.4"
+    "php": ">=7.2.0",
+    "illuminate/support": "^5.7",
+    "illuminate/config": "^5.7",
+    "illuminate/http": "^5.7",
+    "ext-simplexml": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.3"
