--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,16 @@
   ],
   "require": {
     "php": ">=7.2.0",
-    "illuminate/support": "^5.7",
-    "illuminate/config": "^5.7",
-    "illuminate/http": "^5.7",
-    "ext-simplexml": "*"
+    "illuminate/support": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0",
+    "illuminate/config": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0",
+    "illuminate/http": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0",
+    "ext-simplexml": "*",
+    "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.3"
+    "orchestra/testbench": "~3.4.2|~3.5.0|~3.6.0|~3.7.0",
+    "phpunit/phpunit": "^6.3",
+    "fzaninotto/faker": "^1.8"
   },
   "autoload": {
     "psr-4": {
@@ -39,6 +42,12 @@
             "Package": "CollingMedia\\Tenstreet\\Facade"
         }
     }
+  },
+  "scripts": {
+    "test": "phpunit"
+  },
+  "config": {
+    "sort-packages": true
   },
   "minimum-stability": "dev",
   "prefer-stable": true
